--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,4 +5,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   color: $text-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
